--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -10,7 +10,7 @@
             border: 1px solid #ccc;
             padding: 10px;
             margin: 5px;
-            width: 300px;
+            width: 320px;
             display: inline-block;
             vertical-align: top;
             background-color: #fff;
@@ -33,6 +33,7 @@
         input, select { margin: 5px; padding: 5px; border: 1px solid #ddd; border-radius: 3px; }
         label { font-weight: bold; }
         .op-group { color: #ff4500; font-weight: bold; }
+        .status { margin-left: 5px; color: #28a745; }
     </style>
 </head>
 <body>
@@ -54,7 +55,7 @@
 <script>
     const apiBase = "http://localhost:25567/api";
     const particles = ["FIREWORK", "FLAME", "HEART", "NOTE", "SMOKE", "VILLAGER_HAPPY"];
-    const chatColors = ["normal", "red", "blue", "green", "yellow", "purple"];
+    const chatColors = ["normal", "§c", "§b", "§a", "§e", "§d", "rainbow", "random", "gradient"];
     let availableGroups = [];
 
     function fetchPlayers() {
@@ -64,7 +65,7 @@
                 if (data.status === "success") {
                     document.getElementById("status").textContent = "在线";
                     const playerList = document.getElementById("player-list");
-                    playerList.innerHTML = ""; // 清空旧卡片
+                    playerList.innerHTML = "";
                     data.players.forEach(player => {
                         const card = document.createElement("div");
                         card.className = "player-card";
@@ -78,6 +79,7 @@
                                     <label>积分:</label>
                                     <input type="number" value="${player.score}" id="score-${player.uuid}">
                                     <button onclick="setScore('${player.uuid}', document.getElementById('score-${player.uuid}').value)">设置</button>
+                                    <span id="score-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>
                                     <label>Rank:</label>
@@ -91,6 +93,7 @@
                                     </select>
                                     <input id="custom-rank-${player.uuid}" placeholder="输入自定义 Rank" value="${!["VIP", "SVIP", "VVIP", "UVIP", "EVIP"].includes(player.rank) ? player.rank : ""}" style="display: ${!["VIP", "SVIP", "VVIP", "UVIP", "EVIP"].includes(player.rank) ? 'inline' : 'none'};">
                                     <button onclick="setRank('${player.uuid}', document.getElementById('rank-${player.uuid}').value === 'custom' ? document.getElementById('custom-rank-${player.uuid}').value : document.getElementById('rank-${player.uuid}').value)">设置</button>
+                                    <span id="rank-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>
                                     <label>身份组:</label>
@@ -98,6 +101,7 @@
                                         ${availableGroups.map(g => `<option value="${g}" ${currentGroup === g ? "selected" : ""}>${g}</option>`).join("")}
                                     </select>
                                     <button onclick="setGroup('${player.uuid}', document.getElementById('group-${player.uuid}').value)">设置</button>
+                                    <span id="group-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>
                                     <label>进服粒子:</label>
@@ -105,18 +109,21 @@
                                         ${particles.map(p => `<option value="${p}" ${p === player.join_particle ? "selected" : ""}>${p}</option>`).join("")}
                                     </select>
                                     <button onclick="setParticle('${player.uuid}', document.getElementById('particle-${player.uuid}').value)">设置</button>
+                                    <span id="particle-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>
                                     <label>进服消息:</label>
                                     <input id="join-message-${player.uuid}" value="${player.join_message}">
                                     <button onclick="setJoinMessage('${player.uuid}', document.getElementById('join-message-${player.uuid}').value)">设置</button>
+                                    <span id="join-message-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>
                                     <label>发言颜色:</label>
                                     <select id="chat-color-${player.uuid}">
-                                        ${chatColors.map(c => `<option value="${c}" ${c === player.chat_color ? "selected" : ""}>${c}</option>`).join("")}
+                                        ${chatColors.map(c => `<option value="${c}" ${c === player.chat_color ? "selected" : ""}>${c === "normal" ? "默认" : c === "rainbow" ? "彩虹" : c === "random" ? "随机" : c === "gradient" ? "渐变" : c}</option>`).join("")}
                                     </select>
                                     <button onclick="setChatColor('${player.uuid}', document.getElementById('chat-color-${player.uuid}').value)">设置</button>
+                                    <span id="chat-color-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>
                                     <label>显示选项:</label>
@@ -124,11 +131,13 @@
                                     <input type="checkbox" id="show-vip-${player.uuid}" ${player.show_vip ? "checked" : ""}> VIP
                                     <input type="checkbox" id="show-group-${player.uuid}" ${player.show_group ? "checked" : ""}> 身份组
                                     <button onclick="setDisplayOptions('${player.uuid}')">设置</button>
+                                    <span id="display-options-status-${player.uuid}" class="status"></span>
                                 </p>
                                 <p>封禁状态: ${player.ban_until === 0 ? "未封禁" : "已封禁"}</p>
                                 <p>封禁原因: ${player.ban_reason || "无"}</p>
                                 <button onclick="banPlayer('${player.uuid}')">封禁</button>
                                 <button onclick="unbanPlayer('${player.uuid}')">解封</button>
+                                <span id="ban-status-${player.uuid}" class="status"></span>
                             </details>
                         `;
                         playerList.appendChild(card);
@@ -171,42 +180,84 @@
 
     function setScore(uuid, score) {
         fetch(`${apiBase}/set_score?player=${uuid}&score=${score}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("设置积分失败:", err));
+            .then(() => {
+                document.getElementById(`score-status-${uuid}`).textContent = "设置成功";
+                setTimeout(() => document.getElementById(`score-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`score-status-${uuid}`).textContent = "设置失败";
+                console.error("设置积分失败:", err);
+            });
     }
 
     function setRank(uuid, rank) {
         if (rank) {
             fetch(`${apiBase}/set_rank?player=${uuid}&rank=${rank}`)
-                .then(() => fetchPlayers())
-                .catch(err => console.error("设置 Rank 失败:", err));
+                .then(() => {
+                    document.getElementById(`rank-status-${uuid}`).textContent = "设置成功";
+                    setTimeout(() => document.getElementById(`rank-status-${uuid}`).textContent = "", 3000);
+                    fetchPlayers();
+                })
+                .catch(err => {
+                    document.getElementById(`rank-status-${uuid}`).textContent = "设置失败";
+                    console.error("设置 Rank 失败:", err);
+                });
         }
     }
 
     function setGroup(uuid, group) {
         if (group) {
             fetch(`${apiBase}/set_group?player=${uuid}&group=${group}`)
-                .then(() => fetchPlayers())
-                .catch(err => console.error("设置身份组失败:", err));
+                .then(() => {
+                    document.getElementById(`group-status-${uuid}`).textContent = "设置成功";
+                    setTimeout(() => document.getElementById(`group-status-${uuid}`).textContent = "", 3000);
+                    fetchPlayers();
+                })
+                .catch(err => {
+                    document.getElementById(`group-status-${uuid}`).textContent = "设置失败";
+                    console.error("设置身份组失败:", err);
+                });
         }
     }
 
     function setParticle(uuid, particle) {
         fetch(`${apiBase}/set_particle?player=${uuid}&particle=${particle}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("设置粒子失败:", err));
+            .then(() => {
+                document.getElementById(`particle-status-${uuid}`).textContent = "设置成功";
+                setTimeout(() => document.getElementById(`particle-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`particle-status-${uuid}`).textContent = "设置失败";
+                console.error("设置粒子失败:", err);
+            });
     }
 
     function setJoinMessage(uuid, message) {
         fetch(`${apiBase}/set_join_message?player=${uuid}&message=${message}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("设置进服消息失败:", err));
+            .then(() => {
+                document.getElementById(`join-message-status-${uuid}`).textContent = "设置成功";
+                setTimeout(() => document.getElementById(`join-message-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`join-message-status-${uuid}`).textContent = "设置失败";
+                console.error("设置进服消息失败:", err);
+            });
     }
 
     function setChatColor(uuid, chatColor) {
         fetch(`${apiBase}/set_chat_color?player=${uuid}&chat_color=${chatColor}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("设置发言颜色失败:", err));
+            .then(() => {
+                document.getElementById(`chat-color-status-${uuid}`).textContent = "设置成功";
+                setTimeout(() => document.getElementById(`chat-color-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`chat-color-status-${uuid}`).textContent = "设置失败";
+                console.error("设置发言颜色失败:", err);
+            });
     }
 
     function setDisplayOptions(uuid) {
@@ -214,22 +265,43 @@
         const showVip = document.getElementById(`show-vip-${uuid}`).checked;
         const showGroup = document.getElementById(`show-group-${uuid}`).checked;
         fetch(`${apiBase}/set_display_options?player=${uuid}&show_rank=${showRank}&show_vip=${showVip}&show_group=${showGroup}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("设置显示选项失败:", err));
+            .then(() => {
+                document.getElementById(`display-options-status-${uuid}`).textContent = "设置成功";
+                setTimeout(() => document.getElementById(`display-options-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`display-options-status-${uuid}`).textContent = "设置失败";
+                console.error("设置显示选项失败:", err);
+            });
     }
 
     function banPlayer(uuid) {
         const time = prompt("封禁时间(分钟，-1为永久):");
         const reason = prompt("封禁原因:");
         fetch(`${apiBase}/ban?player=${uuid}&banTime=${time}&reason=${reason}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("封禁失败:", err));
+            .then(() => {
+                document.getElementById(`ban-status-${uuid}`).textContent = "封禁成功";
+                setTimeout(() => document.getElementById(`ban-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`ban-status-${uuid}`).textContent = "封禁失败";
+                console.error("封禁失败:", err);
+            });
     }
 
     function unbanPlayer(uuid) {
         fetch(`${apiBase}/unban?player=${uuid}`)
-            .then(() => fetchPlayers())
-            .catch(err => console.error("解封失败:", err));
+            .then(() => {
+                document.getElementById(`ban-status-${uuid}`).textContent = "解封成功";
+                setTimeout(() => document.getElementById(`ban-status-${uuid}`).textContent = "", 3000);
+                fetchPlayers();
+            })
+            .catch(err => {
+                document.getElementById(`ban-status-${uuid}`).textContent = "解封失败";
+                console.error("解封失败:", err);
+            });
     }
 
     function createGroup() {
