--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,338 +2,40 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>黑像素服务器管理面板</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
-        .server-status { font-size: 18px; margin-bottom: 20px; color: #333; }
-        .player-card {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin: 5px;
-            width: 320px;
-            display: inline-block;
-            vertical-align: top;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        details { margin: 10px 0; }
-        summary { cursor: pointer; font-weight: bold; color: #007bff; }
-        .group-list { max-height: 100px; overflow-y: auto; border: 1px solid #ddd; padding: 5px; }
-        button {
-            margin: 5px;
-            padding: 5px 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        button:hover { background-color: #0056b3; }
-        input, select { margin: 5px; padding: 5px; border: 1px solid #ddd; border-radius: 3px; }
-        label { font-weight: bold; }
-        .op-group { color: #ff4500; font-weight: bold; }
-        .status { margin-left: 5px; color: #28a745; }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="server-status">服务器状态: <span id="status">加载中...</span></div>
-<div id="player-list"></div>
-<details>
-    <summary>身份组管理</summary>
-    <div id="group-list" class="group-list"></div>
-    <div>
-        <input id="group-name" placeholder="组名">
-        <input id="group-color" placeholder="颜色 (如 §f)">
-        <input id="group-emoji" placeholder="表情">
-        <input id="group-badge" placeholder="徽章">
-        <input id="group-prefix" placeholder="前缀 (如 [组名])">
-        <button onclick="createGroup()">创建</button>
+<div class="container">
+    <div class="server-status">
+        <span>服务器状态:</span>
+        <span id="status" class="status-indicator">加载中...</span>
     </div>
-</details>
-
-<script>
-    const apiBase = "http://localhost:25567/api";
-    const particles = ["FIREWORK", "FLAME", "HEART", "NOTE", "SMOKE", "VILLAGER_HAPPY"];
-    const chatColors = ["normal", "§c", "§b", "§a", "§e", "§d", "rainbow", "random", "gradient"];
-    let availableGroups = [];
-
-    function fetchPlayers() {
-        fetch(`${apiBase}/list_players`)
-            .then(res => res.json())
-            .then(data => {
-                if (data.status === "success") {
-                    document.getElementById("status").textContent = "在线";
-                    const playerList = document.getElementById("player-list");
-                    playerList.innerHTML = "";
-                    data.players.forEach(player => {
-                        const card = document.createElement("div");
-                        card.className = "player-card";
-                        card.id = `player-${player.uuid}`;
-                        const currentGroup = player.groups && player.groups.length > 0 ? player.groups[0] : "member";
-                        card.innerHTML = `
-                            <details open>
-                                <summary>${player.name} (${player.online ? "在线" : "离线"})</summary>
-                                <p>UUID: ${player.uuid}</p>
-                                <p>
-                                    <label>积分:</label>
-                                    <input type="number" value="${player.score}" id="score-${player.uuid}">
-                                    <button onclick="setScore('${player.uuid}', document.getElementById('score-${player.uuid}').value)">设置</button>
-                                    <span id="score-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>
-                                    <label>Rank:</label>
-                                    <select id="rank-${player.uuid}" onchange="toggleCustomRank('${player.uuid}')">
-                                        <option value="VIP" ${player.rank === "VIP" ? "selected" : ""}>VIP</option>
-                                        <option value="SVIP" ${player.rank === "SVIP" ? "selected" : ""}>SVIP</option>
-                                        <option value="VVIP" ${player.rank === "VVIP" ? "selected" : ""}>VVIP</option>
-                                        <option value="UVIP" ${player.rank === "UVIP" ? "selected" : ""}>UVIP</option>
-                                        <option value="EVIP" ${player.rank === "EVIP" ? "selected" : ""}>EVIP</option>
-                                        <option value="custom" ${!["VIP", "SVIP", "VVIP", "UVIP", "EVIP"].includes(player.rank) ? "selected" : ""}>自定义</option>
-                                    </select>
-                                    <input id="custom-rank-${player.uuid}" placeholder="输入自定义 Rank" value="${!["VIP", "SVIP", "VVIP", "UVIP", "EVIP"].includes(player.rank) ? player.rank : ""}" style="display: ${!["VIP", "SVIP", "VVIP", "UVIP", "EVIP"].includes(player.rank) ? 'inline' : 'none'};">
-                                    <button onclick="setRank('${player.uuid}', document.getElementById('rank-${player.uuid}').value === 'custom' ? document.getElementById('custom-rank-${player.uuid}').value : document.getElementById('rank-${player.uuid}').value)">设置</button>
-                                    <span id="rank-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>
-                                    <label>身份组:</label>
-                                    <select id="group-${player.uuid}">
-                                        ${availableGroups.map(g => `<option value="${g}" ${currentGroup === g ? "selected" : ""}>${g}</option>`).join("")}
-                                    </select>
-                                    <button onclick="setGroup('${player.uuid}', document.getElementById('group-${player.uuid}').value)">设置</button>
-                                    <span id="group-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>
-                                    <label>进服粒子:</label>
-                                    <select id="particle-${player.uuid}">
-                                        ${particles.map(p => `<option value="${p}" ${p === player.join_particle ? "selected" : ""}>${p}</option>`).join("")}
-                                    </select>
-                                    <button onclick="setParticle('${player.uuid}', document.getElementById('particle-${player.uuid}').value)">设置</button>
-                                    <span id="particle-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>
-                                    <label>进服消息:</label>
-                                    <input id="join-message-${player.uuid}" value="${player.join_message}">
-                                    <button onclick="setJoinMessage('${player.uuid}', document.getElementById('join-message-${player.uuid}').value)">设置</button>
-                                    <span id="join-message-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>
-                                    <label>发言颜色:</label>
-                                    <select id="chat-color-${player.uuid}">
-                                        ${chatColors.map(c => `<option value="${c}" ${c === player.chat_color ? "selected" : ""}>${c === "normal" ? "默认" : c === "rainbow" ? "彩虹" : c === "random" ? "随机" : c === "gradient" ? "渐变" : c}</option>`).join("")}
-                                    </select>
-                                    <button onclick="setChatColor('${player.uuid}', document.getElementById('chat-color-${player.uuid}').value)">设置</button>
-                                    <span id="chat-color-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>
-                                    <label>显示选项:</label>
-                                    <input type="checkbox" id="show-rank-${player.uuid}" ${player.show_rank ? "checked" : ""}> Rank
-                                    <input type="checkbox" id="show-vip-${player.uuid}" ${player.show_vip ? "checked" : ""}> VIP
-                                    <input type="checkbox" id="show-group-${player.uuid}" ${player.show_group ? "checked" : ""}> 身份组
-                                    <button onclick="setDisplayOptions('${player.uuid}')">设置</button>
-                                    <span id="display-options-status-${player.uuid}" class="status"></span>
-                                </p>
-                                <p>封禁状态: ${player.ban_until === 0 ? "未封禁" : "已封禁"}</p>
-                                <p>封禁原因: ${player.ban_reason || "无"}</p>
-                                <button onclick="banPlayer('${player.uuid}')">封禁</button>
-                                <button onclick="unbanPlayer('${player.uuid}')">解封</button>
-                                <span id="ban-status-${player.uuid}" class="status"></span>
-                            </details>
-                        `;
-                        playerList.appendChild(card);
-                    });
-                } else {
-                    document.getElementById("status").textContent = "离线";
-                }
-            })
-            .catch(err => {
-                document.getElementById("status").textContent = "离线";
-                console.error("请求失败:", err);
-            });
-    }
-
-    function fetchGroups() {
-        fetch(`${apiBase}/list_groups`)
-            .then(res => res.json())
-            .then(data => {
-                if (data.status === "success") {
-                    availableGroups = data.groups.map(g => g.name);
-                    const groupList = document.getElementById("group-list");
-                    groupList.innerHTML = "";
-                    data.groups.forEach(group => {
-                        const div = document.createElement("div");
-                        const colorStyle = group.name === "op" ? "op-group" : "";
-                        div.innerHTML = `<span class="${colorStyle}">[${group.prefix || group.name}] ${group.name}</span>
-                            <button onclick="deleteGroup('${group.name}')">删除</button>`;
-                        groupList.appendChild(div);
-                    });
-                }
-            })
-            .catch(err => console.error("请求失败:", err));
-    }
-
-    function toggleCustomRank(uuid) {
-        const select = document.getElementById(`rank-${uuid}`);
-        const customInput = document.getElementById(`custom-rank-${uuid}`);
-        customInput.style.display = select.value === "custom" ? "inline" : "none";
-    }
-
-    function setScore(uuid, score) {
-        fetch(`${apiBase}/set_score?player=${uuid}&score=${score}`)
-            .then(() => {
-                document.getElementById(`score-status-${uuid}`).textContent = "设置成功";
-                setTimeout(() => document.getElementById(`score-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`score-status-${uuid}`).textContent = "设置失败";
-                console.error("设置积分失败:", err);
-            });
-    }
-
-    function setRank(uuid, rank) {
-        if (rank) {
-            fetch(`${apiBase}/set_rank?player=${uuid}&rank=${rank}`)
-                .then(() => {
-                    document.getElementById(`rank-status-${uuid}`).textContent = "设置成功";
-                    setTimeout(() => document.getElementById(`rank-status-${uuid}`).textContent = "", 3000);
-                    fetchPlayers();
-                })
-                .catch(err => {
-                    document.getElementById(`rank-status-${uuid}`).textContent = "设置失败";
-                    console.error("设置 Rank 失败:", err);
-                });
-        }
-    }
-
-    function setGroup(uuid, group) {
-        if (group) {
-            fetch(`${apiBase}/set_group?player=${uuid}&group=${group}`)
-                .then(() => {
-                    document.getElementById(`group-status-${uuid}`).textContent = "设置成功";
-                    setTimeout(() => document.getElementById(`group-status-${uuid}`).textContent = "", 3000);
-                    fetchPlayers();
-                })
-                .catch(err => {
-                    document.getElementById(`group-status-${uuid}`).textContent = "设置失败";
-                    console.error("设置身份组失败:", err);
-                });
-        }
-    }
-
-    function setParticle(uuid, particle) {
-        fetch(`${apiBase}/set_particle?player=${uuid}&particle=${particle}`)
-            .then(() => {
-                document.getElementById(`particle-status-${uuid}`).textContent = "设置成功";
-                setTimeout(() => document.getElementById(`particle-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`particle-status-${uuid}`).textContent = "设置失败";
-                console.error("设置粒子失败:", err);
-            });
-    }
-
-    function setJoinMessage(uuid, message) {
-        fetch(`${apiBase}/set_join_message?player=${uuid}&message=${message}`)
-            .then(() => {
-                document.getElementById(`join-message-status-${uuid}`).textContent = "设置成功";
-                setTimeout(() => document.getElementById(`join-message-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`join-message-status-${uuid}`).textContent = "设置失败";
-                console.error("设置进服消息失败:", err);
-            });
-    }
-
-    function setChatColor(uuid, chatColor) {
-        fetch(`${apiBase}/set_chat_color?player=${uuid}&chat_color=${chatColor}`)
-            .then(() => {
-                document.getElementById(`chat-color-status-${uuid}`).textContent = "设置成功";
-                setTimeout(() => document.getElementById(`chat-color-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`chat-color-status-${uuid}`).textContent = "设置失败";
-                console.error("设置发言颜色失败:", err);
-            });
-    }
-
-    function setDisplayOptions(uuid) {
-        const showRank = document.getElementById(`show-rank-${uuid}`).checked;
-        const showVip = document.getElementById(`show-vip-${uuid}`).checked;
-        const showGroup = document.getElementById(`show-group-${uuid}`).checked;
-        fetch(`${apiBase}/set_display_options?player=${uuid}&show_rank=${showRank}&show_vip=${showVip}&show_group=${showGroup}`)
-            .then(() => {
-                document.getElementById(`display-options-status-${uuid}`).textContent = "设置成功";
-                setTimeout(() => document.getElementById(`display-options-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`display-options-status-${uuid}`).textContent = "设置失败";
-                console.error("设置显示选项失败:", err);
-            });
-    }
-
-    function banPlayer(uuid) {
-        const time = prompt("封禁时间(分钟，-1为永久):");
-        const reason = prompt("封禁原因:");
-        fetch(`${apiBase}/ban?player=${uuid}&banTime=${time}&reason=${reason}`)
-            .then(() => {
-                document.getElementById(`ban-status-${uuid}`).textContent = "封禁成功";
-                setTimeout(() => document.getElementById(`ban-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`ban-status-${uuid}`).textContent = "封禁失败";
-                console.error("封禁失败:", err);
-            });
-    }
-
-    function unbanPlayer(uuid) {
-        fetch(`${apiBase}/unban?player=${uuid}`)
-            .then(() => {
-                document.getElementById(`ban-status-${uuid}`).textContent = "解封成功";
-                setTimeout(() => document.getElementById(`ban-status-${uuid}`).textContent = "", 3000);
-                fetchPlayers();
-            })
-            .catch(err => {
-                document.getElementById(`ban-status-${uuid}`).textContent = "解封失败";
-                console.error("解封失败:", err);
-            });
-    }
-
-    function createGroup() {
-        const name = document.getElementById("group-name").value;
-        const color = document.getElementById("group-color").value || "§f";
-        const emoji = document.getElementById("group-emoji").value;
-        const badge = document.getElementById("group-badge").value;
-        const prefix = document.getElementById("group-prefix").value;
-        fetch(`${apiBase}/create_group?name=${name}&color=${color}&emoji=${emoji}&badge=${badge}&prefix=${prefix}`)
-            .then(() => {
-                fetchGroups();
-                document.getElementById("group-name").value = "";
-                document.getElementById("group-color").value = "";
-                document.getElementById("group-emoji").value = "";
-                document.getElementById("group-badge").value = "";
-                document.getElementById("group-prefix").value = "";
-            })
-            .catch(err => console.error("创建身份组失败:", err));
-    }
-
-    function deleteGroup(name) {
-        fetch(`${apiBase}/delete_group?name=${name}`)
-            .then(() => fetchGroups())
-            .catch(err => console.error("删除身份组失败:", err));
-    }
-
-    setInterval(() => {
-        fetchPlayers();
-        fetchGroups();
-    }, 5000);
-    fetchPlayers();
-    fetchGroups();
-</script>
+    <div class="search-bar">
+        <input type="text" id="search-input" placeholder="搜索玩家..." class="input-field">
+        <button onclick="searchPlayers()" class="btn primary-btn"><i class="fas fa-search"></i></button>
+    </div>
+    <div id="player-list" class="player-list"></div>
+    <div class="group-management">
+        <div class="accordion">
+            <input type="checkbox" id="group-toggle" class="accordion-toggle">
+            <label for="group-toggle" class="accordion-header"><i class="fas fa-users"></i> 身份组管理</label>
+            <div class="accordion-content">
+                <div id="group-list" class="group-list"></div>
+                <div class="group-form">
+                    <input id="group-name" placeholder="组名" class="input-field">
+                    <input id="group-color" placeholder="颜色 (如 §f)" class="input-field">
+                    <input id="group-emoji" placeholder="表情" class="input-field">
+                    <input id="group-badge" placeholder="徽章" class="input-field">
+                    <input id="group-prefix" placeholder="前缀 (如 [组名])" class="input-field">
+                    <button onclick="createGroup()" class="btn primary-btn"><i class="fas fa-plus"></i> 创建</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
