--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,6 +12,7 @@
     <div class="server-status">
         <span>服务器状态:</span>
         <span id="status" class="status-indicator">加载中...</span>
+        <button id="refresh-btn" class="btn primary-btn"><i class="fas fa-sync"></i> 刷新</button>
     </div>
     <div class="search-bar">
         <input type="text" id="search-input" placeholder="实时搜索玩家..." class="input-field">
@@ -35,7 +36,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>黑像素服务器管理面板 &copy; 2025 | Powered by DWGX1338</p>
+        <p>黑像素服务器管理面板 © 2025 | Powered by DWGX1337</p>
     </footer>
 </div>
 <script src="script.js"></script>
