在RankManager中添加了缺失的方法 在Global中添加ChatListener字段和相关方法 优化了数据库初始化 移除了不必要的缓存更新调用 确保与现有ChatListener兼容 更新网页

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -25,7 +25,7 @@
             <div class="accordion-content">
                 <div id="group-list" class="group-list"></div>
                 <div class="group-form">
-                    <input id="group-name" placeholder="组名" class="input-field">
+                    <input id="group-name" placeholder="组名" class="input-field" required>
                     <input id="group-color" placeholder="颜色 (如 §f)" class="input-field">
                     <input id="group-emoji" placeholder="表情" class="input-field">
                     <input id="group-badge" placeholder="徽章" class="input-field">
